Week 2 edits to W matrix representation

--- a/Deep Learning/1_Neural Networks/Week 2/Notebooks/1_LR_algo_math_rep.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 2/Notebooks/1_LR_algo_math_rep.ipynb
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Hypothesis"
+    "## Model Formulation ( not Hypothesis as we will not test hypothesis later)"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "source": [
     "**Loss function should be - **  \n",
     "**1. Able to penalize deviations from actual values which are 1,0 in classification, i.e errors become large as predictions deviate from actuals, and hence we can try to minimize it in finding paramters of hypothesized model**  \n",
-    "**2. Be convex function if possible, so that the numerical technique of finding optimum values (gradient descent) can converge reliably**  \n",
+    "**2. Be convex function if possible, so that the approximate numerical techniques of finding optimum values (gradient descent) can converge reliably. Note that an exact solution is computationally expensive to find (more on this in Linear Algebra section)**  \n",
     "**3. More than one loss function forms can fulfil these criteria.**\n"
    ]
   },
