--- a/Deep Learning/1_Neural Networks/Week 3/Notebooks/1_2layerNN.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 3/Notebooks/1_2layerNN.ipynb
@@ -30,14 +30,14 @@
    "source": [
     "Single unit in a hidden layer can be viewed as a logistic unit discussed in week 1 and 2. A layer then becomes a collection of such logistic units, each taking feed from all the inputs from previous layer. The matrix representations for one hidden layer can be described as\n",
     "\n",
-    "**A Matrix**  \n",
+    "**a Matrix**  \n",
     "$a^{[k]}$ matrix represents the activation of kth layer, and specifically. \n",
     "* $a^{[0]} = X$ will be input layer, n x m order matrix, so 3 x m order here  \n",
     "* $a^{[1]}$ will be hidden layer , of order h x 1, h being no. of hidden units , here 4 x 1 represented as  \n",
     "$\\left\\lgroup \\matrix {a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4} \\right \\rgroup$  \n",
     "* $a^{[2]} = \\widehat y $ will be output layer , of 1 x 1 dimention here  \n",
     "\n",
-    "**Z matrix**   \n",
+    "**z matrix**   \n",
     "$z^{[k]}$ matrix serves as input to derive activation, and $a^{[k]} = g(z^{[k]})$ specifically - .  \n",
     "  * $z^{[1]}$ will be for hidden layer , of order h x 1, h being no. of hidden units , here 4 x 1  \n",
     "    $\\left\\lgroup \\matrix {z^{[1]}_1 \\cr z^{[1]}_2 \\cr z^{[1]}_3 \\cr z^{[1]}_4} \\right \\rgroup$ \n",
@@ -50,11 +50,11 @@
     "\n",
     "Weight vectors are defined with respect to a unit in a layer. For a unit in layer k, fed from h units from layer k-1,\n",
     "it will have h weights, and 1 bias.In general - \n",
-    "* **Weight vector** defined for a unit j in layer k is $W^{[k]}_j$, with dimensions h x 1, h being units from k-1 layer feeding this unit. \n",
-    "* For network above there are 4 weight vectors for each hidden unit in layer 1 - $W^{[1]} \\;, W^{[2]},\\; W^{[3]},\\; W^{[4]}$  , with a vector expanded as  \n",
-    "$W^{[1]} = \\left\\lgroup \\matrix {w^{[1]}_1 \\cr w^{[1]}_2 \\cr w^{[1]}_3}  \\right \\rgroup$  \n",
-    "* The **Weight matrix ** for this layer can be defined by stacking these weight vectors in cols as.   \n",
-    "$\\left\\lgroup \\matrix {w^{[1]}_1 & w^{[2]}_1 & w^{[3]}_1 & w^{[4]}_1 \\cr w^{[1]}_2 & w^{[2]}_2 & w^{[3]}_2 & w^{[4]}_2 \\cr w^{[1]}_3 & w^{[2]}_3 & w^{[3]}_3 & w^{[4]}_3} \\right \\rgroup$\n",
+    "* **Weight vector** defined for a unit j in layer k is $w^{[k]}_j$, with dimensions h x 1, h being units from k-1 layer feeding this unit. \n",
+    "* For network above there are 4 weight vectors for each hidden unit in layer 1 - $w^{[1]}_1 \\;, w^{[1]}_2,\\; w^{[1]}_3,\\; w^{[1]}_4$  , with a vector expanded as  \n",
+    "$w^{[1]}_1 = \\left\\lgroup \\matrix {w^{[1]}_{11} \\cr w^{[1]}_{12} \\cr w^{[1]}_{13}}  \\right \\rgroup$  \n",
+    "* The **Weight matrix ** for this layer can be defined by stacking these weight vectors in cols as below. The first position in subscript identifies the hidden unit in layer, the second identifies the hidden unit in previous layer connecting to it  \n",
+    "$W^{[1]} = \\left\\lgroup \\matrix {w^{[1]}_{11} & w^{[1]}_{21} & w^{[1]}_{31} & w^{[1]}_{41} \\cr w^{[1]}_{12} & w^{[1]}_{22} & w^{[1]}_{32} & w^{[1]}_{42} \\cr w^{[1]}_{13} & w^{[1]}_{23} & w^{[1]}_{33} & w^{[1]}_{43}} \\right \\rgroup$\n",
     "\n",
     "\n",
     "**Bias Matrix**\n",
@@ -82,7 +82,7 @@
     "**Layer 1**   \n",
     "* $ z^{[1]}  =\n",
     "\\left\\lgroup \\matrix{z^{[1]}_1 \\cr z^{[1]}_2 \\cr z^{[1]}_3 \\cr z^{[1]}_4}\\right\\rgroup = \n",
-    "\\left\\lgroup \\matrix {w^{[1]}_1 & w^{[2]}_1 & w^{[3]}_1 & w^{[4]}_1 \\cr w^{[1]}_2 & w^{[2]}_2 & w^{[3]}_2 & w^{[4]}_2 \\cr w^{[1]}_3 & w^{[2]}_3 & w^{[3]}_3 & w^{[4]}_3} \\right \\rgroup^T .\n",
+    "\\left\\lgroup \\matrix {w^{[1]}_{11} & w^{[1]}_{21} & w^{[1]}_{31} & w^{[1]}_{41} \\cr w^{[1]}_{12} & w^{[1]}_{22} & w^{[1]}_{32} & w^{[1]}_{42} \\cr w^{[1]}_{13} & w^{[1]}_{23} & w^{[1]}_{33} & w^{[1]}_{43}} \\right \\rgroup^T .\n",
     "\\left\\lgroup \\matrix{x_1 \\cr x_2 \\cr x_3}\\right \\rgroup + \n",
     "\\left\\lgroup \\matrix{b^{[1]}_1 \\cr b^{[1]}_2 \\cr b^{[1]}_3 \\cr b^{[1]}_4}\\right\\rgroup$  \n",
     "* $a^{[1]} = \\left\\lgroup \\matrix{a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4}\\right\\rgroup = \n",
@@ -92,7 +92,7 @@
     "\n",
     "**Layer 2** \n",
     "* $z^{[2]} = z^{[2]}_1 =  \n",
-    "\\left\\lgroup \\matrix {w^{[2]}_1 \\cr w^{[2]}_2 \\cr w^{[2]}_3 \\cr w^{[2]}_4} \\right \\rgroup^T \\left\\lgroup \\matrix {a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4} \\right \\rgroup + b^{[2]}_1$  \n",
+    "\\left\\lgroup \\matrix {w^{[2]}_{11} \\cr w^{[2]}_{12} \\cr w^{[2]}_{13} \\cr w^{[2]}_{14}} \\right \\rgroup^T \\left\\lgroup \\matrix {a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4} \\right \\rgroup + b^{[2]}_1$  \n",
     "\n",
     "* $a^{[2]} = \\sigma (z^{[2]})$\n",
     "\n",
