--- a/Deep Learning/1_Neural Networks/Week 2/Python and Vectorization/Notebooks/LR_Vectorization.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 2/Python and Vectorization/Notebooks/LR_Vectorization.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -199,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Imageine Loading the data (cat/non-cat) after loading libraries\n",
@@ -723,7 +725,9 @@
   {
    "cell_type": "code",
    "execution_count": 419,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def lr_model(X_train,Y_train, X_test, Y_test, alpha = 0.05, iters = 2000, print_cost = True):\n",
@@ -774,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +843,9 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Normalize X matrices\n",
@@ -1016,6 +1022,17 @@
     "\n",
     "plt.imshow(image)\n",
     "print(\"y = \" + str(np.squeeze(my_predicted_image)) + \", your algorithm predicts a \\\"\" + classes[int(np.squeeze(my_predicted_image)),].decode(\"utf-8\") +  \"\\\" picture.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Bibliography:\n",
+    "http://www.wildml.com/2015/09/implementing-a-neural-network-from-scratch/  \n",
+    "https://stats.stackexchange.com/questions/211436/why-do-we-normalize-images-by-subtracting-the-datasets-image-mean-and-not-the-c"
    ]
   },
   {
