Week 3 grad descent vectorization in  progress

--- a/Deep Learning/1_Neural Networks/Week 3/Notebooks/1_2layerNN.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 3/Notebooks/1_2layerNN.ipynb
@@ -54,7 +54,7 @@
     "* For network above there are 4 weight vectors for each hidden unit in layer 1 - $w^{[1]}_1 \\;, w^{[1]}_2,\\; w^{[1]}_3,\\; w^{[1]}_4$  , with a vector expanded as  \n",
     "$w^{[1]}_1 = \\left\\lgroup \\matrix {w^{[1]}_{11} \\cr w^{[1]}_{12} \\cr w^{[1]}_{13}}  \\right \\rgroup$  \n",
     "\n",
-    "* The **Weight matrix ** for this layer can be defined by stacking these weight vectors in cols as below. The first position in subscript identifies the hidden unit in layer, the second identifies the hidden unit in previous layer connecting to it  \n",
+    "* The **Weight matrix ** for this layer can be defined by stacking these weight vectors in cols as below. **The first position in subscript identifies the hidden unit in layer, the second identifies the hidden unit in previous layer connecting to it  **  \n",
     "$W^{[1]} = \\left\\lgroup \\matrix {w^{[1]}_{11} & w^{[1]}_{21} & w^{[1]}_{31} & w^{[1]}_{41} \\cr w^{[1]}_{12} & w^{[1]}_{22} & w^{[1]}_{32} & w^{[1]}_{42} \\cr w^{[1]}_{13} & w^{[1]}_{23} & w^{[1]}_{33} & w^{[1]}_{43}} \\right \\rgroup \\\\$  \n",
     "The order being $(n^{[0]}, n^{[1]})$ , that is (3,4) \n",
     "\n",
@@ -93,7 +93,7 @@
     "* $a^{[0]} = X = \\left\\lgroup \\matrix{x_1 \\cr x_2 \\cr x_3}\\right \\rgroup$ will be input layer, $(n^{[0]}, m)$ order matrix, so 3 x m order here , shown for m = 1 \n",
     "* $a^{[1]} = g^{[1]}(z^{[1]})$ will be hidden layer , of order $(n^{[1]}, 1)$ , here 4 x 1 represented as  \n",
     "$\\left\\lgroup \\matrix {a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4} \\right \\rgroup$  \n",
-    "* $a^{[2]} = \\widehat y = = g^{[2]}(z^{[2]})$ will be output layer , of $(n^{[2]}, 1)$ , 1 x 1 dimention here  \n",
+    "* $a^{[2]} = \\widehat y = g^{[2]}(z^{[2]})$ will be output layer , of $(n^{[2]}, 1)$ , 1 x 1 dimention here  \n",
     "\n"
    ]
   },
@@ -119,7 +119,7 @@
     "\\left\\lgroup \\matrix{x_1 \\cr x_2 \\cr x_3}\\right \\rgroup + \n",
     "\\left\\lgroup \\matrix{b^{[1]}_1 \\cr b^{[1]}_2 \\cr b^{[1]}_3 \\cr b^{[1]}_4}\\right\\rgroup$  \n",
     "* $a^{[1]} = \\left\\lgroup \\matrix{a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4}\\right\\rgroup = \n",
-    "\\sigma (z^{[1]})$  \n",
+    "g^{[1]}(z^{[1]})$  \n",
     "\n",
     "\n",
     "\n",
@@ -127,7 +127,7 @@
     "* $z^{[2]} = z^{[2]}_1 =  \n",
     "\\left\\lgroup \\matrix {w^{[2]}_{11} \\cr w^{[2]}_{12} \\cr w^{[2]}_{13} \\cr w^{[2]}_{14}} \\right \\rgroup^T \\left\\lgroup \\matrix {a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4} \\right \\rgroup + b^{[2]}_1$  \n",
     "\n",
-    "* $a^{[2]} = \\sigma (z^{[2]})$\n",
+    "* $a^{[2]} = g^{[2]}(z^{[2]})$\n",
     "\n",
     "\n",
     "The above computations can be vectorized for 1 example case as above using matrices as defined above, we do not need to use for loops to calculate each element for Z vector in layers 1 and 2. \n",
@@ -135,9 +135,9 @@
     " \n",
     "\\begin{align}  \n",
     "z^{[1]}  &= {W^{[1]}}^T . x + b^{[1]} \\tag 1\\\\\n",
-    "a^{[1]} &= \\sigma (z^{[1]})\\tag 2\\\\\n",
+    "a^{[1]} &=  g^{[1]}(z^{[1]})\\tag 2\\\\\n",
     "z^{[2]}  &= {W^{[2]}}^T . a^{[1]} + b^{[2]} \\tag 3\\\\\n",
-    "a^{[2]} &= \\sigma (z^{[2]}) \\tag 4\n",
+    "a^{[2]} &= g^{[2]}(z^{[2]}) \\tag 4\n",
     "\\end{align}"
    ]
   },
@@ -163,9 +163,9 @@
     "The 4 equations for case of single example can be more specifically written as. - \n",
     "\\begin{align}  \n",
     "z^{[1](i)}  &= {W^{[1]}}^T . x^{(i)} + b^{[1]} \\tag 1\\\\\n",
-    "a^{[1](i)} &= \\sigma (z^{[1](i)})\\tag 2\\\\\n",
+    "a^{[1](i)} &= g^{[1]}(z^{[1](i)})\\tag 2\\\\\n",
     "z^{[2](i)}  &= {W^{[2]}}^T . a^{[1](i)} + b^{[2]} \\tag 3\\\\\n",
-    "a^{[2](i)} &= \\sigma (z^{[2](i)}) \\tag 4\n",
+    "a^{[2](i)} &= g^{[2]}(z^{[2](i)}) \\tag 4\n",
     "\\end{align}"
    ]
   },
@@ -176,9 +176,9 @@
     "To calculate over m examples, we can use a for loop, but a vectorized implementation would be as -  \n",
     "\\begin{align}\n",
     "Z^{[1]}  &= {W^{[1]}}^T . X + b^{[1]} \\tag 4\\\\\n",
-    "A^{[1]} &= \\sigma (Z^{[1]})\\tag 5\\\\\n",
+    "A^{[1]} &= g^{[1]}(Z^{[1]})\\tag 5\\\\\n",
     "Z^{[2]}  &= {W^{[2]}}^T . A^{[1]} + b^{[2]} \\tag 6\\\\\n",
-    "A^{[2]} &= \\sigma (Z^{[2]}) \\tag 7\n",
+    "A^{[2]} &= g^{[2]}(Z^{[2]}) \\tag 7\n",
     "\\end{align}  \n",
     "\n",
     "**Note capitalized X,Z,A**  \n",
@@ -1186,7 +1186,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 Gradient Descent Solution for 1 example problem"
+    "### 1.5 Vectorized Gradient Descent Computations for 1 example problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5.1. Computation Graph \n",
+    "\n",
+    "$a^{[0]}$  --> $z^{[1]}$ -- > $a^{[1]}$  -->  $z^{[2]}$  --> $a^{[2]}$ --> L($a^{[2]}, y$)   \n",
+    "$W^{[1]}\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;W^{[2]}\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;y$       \n",
+    "$b^{[1]}\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;b^{[2]}$   \n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.5.2 Forward Propagation  \n",
+    "For 1 example case, binary classification:  \n",
+    "\\begin{align}  \n",
+    "z^{[1]}  &= {W^{[1]}}^T . x + b^{[1]} \\tag 1\\\\\n",
+    "a^{[1]} &=  g^{[1]}(z^{[1]})\\tag 2\\\\\n",
+    "z^{[2]}  &= {W^{[2]}}^T . a^{[1]} + b^{[2]} \\tag 3\\\\\n",
+    "a^{[2]} &= g^{[2]}(z^{[2]}) \\tag 4 \\\\\n",
+    "L(a^{[2]}, y) &= - [y* log(a^{[2]}) + (1-y)*log(1-a^{[2]}] \\tag5\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5.3 Back Propagation\n",
+    "We need to compute vectorized form of variables below to change weight and bias matrices with each iteration:  \n",
+    "$da^{[2]}\\\\\n",
+    "dz^{[2]}\\\\\n",
+    "dW^{[2]}\\\\\n",
+    "db^{[2]}\\\\\n",
+    "da^{[1]}\\\\\n",
+    "dz^{[1]}\\\\\n",
+    "dW^{[1]}\\\\\n",
+    "db^{[1]}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assuming $g{[1]}$ and $g{[2]}$ are sigmoid functions, we'll get:  \n",
+    "\\begin{align}\n",
+    "da^{[2]} &= \\frac{a^{[2]} - y}{a^{[2]}(1 - a^{[2]})}\\\\\n",
+    "dz^{[2]} &= \\frac{\\partial a^{[2]}}{\\partial z^{[2]}} da^{[2]} = a^{[2]} - y \\text{    for sigmoid}\\\\\n",
+    "dW^{[2]} &= \\frac{\\partial z^{[2]}}{\\partial W^{[2]}}* dz^{[2]} = a^{[1]}*dz^{[2]}\n",
+    "\\end{align}\n",
+    "$dW^{[2]}$ can be broken down to compute individual $dw^{[2]}_{ij}$'s, recognizing that  \n",
+    "$z^{[2]} = w_{11}^{[2]}.a_1^{[1]} + w_{12}^{[2]}.a_2^{[1]} + w_{13}^{[2]}.a_3^{[1]} + w_{14}^{[2]}.a_4^{[1]} + b^{[2]}$ \n",
+    "\n",
+    "\\begin{align}\n",
+    "\\\\\n",
+    "db^{[2]} &= \\frac{\\partial z^{[2]}}{\\partial b^{[2]}}. dz^{[2]} = dz^{[2]}\\\\\n",
+    "da^{[1]} &= \\frac{\\partial z^{[2]}}{\\partial a^{[1]}}. dz^{[2]} = W^{[2]}*dz^{[2]}\\\\\n",
+    "dz^{[1]} &= \\frac{\\partial a^{[1]}}{\\partial z^{[1]}}. da^{[1]} = a^{[1]}*(1-a^{[1]})* da^{[1]}\\text{     for sigmoid}\\\\\n",
+    "dW^{[1]} &= \\frac{\\partial z^{[1]}}{\\partial W^{[1]}}. dz^{[1]} = a^{[0]}.{dz^{[1]}}^T \\text{       3x1, 1x4 to result in desired 3x4 matrix, computation could be broken down to compute individual} dw^{[1]}_{ij}\\\\\n",
+    "db^{[1]} &= \\frac{\\partial z^{[1]}}{\\partial b^{[1]}}. dz^{[1]} = dz^{[1]}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6 Vectorized Gradient Descent Computations for m example problem"
    ]
   },
   {
