--- a/Python/UDEMY_CODEACDMY/notebooks/16-file IO.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/16-file IO.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#1, 2\n",
@@ -48,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#3. Wiriting\n",
@@ -243,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
