--- a/Python/UM Spcialization/DS_with_Python/Week 1/Week 1.ipynb
+++ b/Python/UM Spcialization/DS_with_Python/Week 1/Week 1.ipynb
@@ -55,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = add_numbers"
@@ -183,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sales_record = {\n",
@@ -451,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "results = {}\n",
@@ -738,7 +744,9 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "delta = dt.timedelta(100)"
@@ -1096,7 +1104,9 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def times_tables():\n",
@@ -1136,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 312,
    "metadata": {
     "collapsed": true
    },
@@ -1379,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1399,7 @@
        "       [3, 5, 0]])"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 314,
    "metadata": {
     "collapsed": true
    },
