--- a/Python/UM Spcialization/DS_with_Python/Week 1/Week 1.ipynb
+++ b/Python/UM Spcialization/DS_with_Python/Week 1/Week 1.ipynb
@@ -12,6 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Python version - 3.6.3 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Well rounded language, Interpreted language  \n",
     "Good for interactive work  \n",
     "- Eg: Variables do not require type declaration\n",
@@ -143,7 +150,8 @@
    "source": [
     "#### Key Sequences  - lists, tuples, dics \n",
     "- all are iterable \n",
-    "- dics are unordered, identified by keys"
+    "- dics are unordered, identified by keys  \n",
+    "- Strings are not Mutable!!"
    ]
   },
   {
@@ -904,7 +912,7 @@
    "source": [
     "### Functional Programming \n",
     "- Use of map function as an example\n",
-    "- map( fx, iter, ...) : much like apply function in R to vectorize a function. \n",
+    "- map( fx, iter, ...) : much like a, which takes a function as an argument, similar to apply function in R to vectorize a function. \n",
     "- Idea of functional programming is to use functions as arguments in other functions to build a chain of operations,\n",
     "this is needed a lot in data cleaning and preparation"
    ]
@@ -1135,6 +1143,56 @@
    ],
    "source": [
     "times_tables() == [i*j for i in range (10) for j in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  if else in list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 4, 4, 6, 6, 8, 8, 10, 10, 12, 12, 14, 14, 16, 16, 18, 18, 20]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.arange(1,20)\n",
+    "# buiild a list as - if no. is divisible by 2 pick it in, else pick previous no. \n",
+    "[n if(n%2 == 0) else n+1 for n in x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3%2"
    ]
   },
   {
