--- a/Python/UM Spcialization/DS_with_Python/Week 2/Week 2 Pandas.ipynb
+++ b/Python/UM Spcialization/DS_with_Python/Week 2/Week 2 Pandas.ipynb
@@ -356,7 +356,8 @@
     }
    ],
    "source": [
-    "# If you specify a subset of index values, when converting a dictionary, values are converted to NaN\n",
+    "# If you specify a subset of index values, when converting a dictionary, only values for specified indices are retained \n",
+    "# New are converted to NaN\n",
     "sports = {'Archery': 'Bhutan',\n",
     "          'Golf': 'Scotland',\n",
     "          'Sumo': 'Japan',\n",
@@ -2317,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 167,
    "metadata": {
     "collapsed": true
    },
@@ -2329,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2489,7 @@
        "Australasia (ANZ) [ANZ]       5              12  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2499,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -2658,7 +2659,7 @@
        "Australasia (ANZ) [ANZ]         4         5              12  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2685,89 +2686,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Afghanistan (AFG)                               False\n",
-       "Algeria (ALG)                                    True\n",
-       "Argentina (ARG)                                  True\n",
-       "Armenia (ARM)                                    True\n",
-       "Australasia (ANZ) [ANZ]                          True\n",
-       "Australia (AUS) [AUS] [Z]                        True\n",
-       "Austria (AUT)                                    True\n",
-       "Azerbaijan (AZE)                                 True\n",
-       "Bahamas (BAH)                                    True\n",
-       "Bahrain (BRN)                                   False\n",
-       "Barbados (BAR) [BAR]                            False\n",
-       "Belarus (BLR)                                    True\n",
-       "Belgium (BEL)                                    True\n",
-       "Bermuda (BER)                                   False\n",
-       "Bohemia (BOH) [BOH] [Z]                         False\n",
-       "Botswana (BOT)                                  False\n",
-       "Brazil (BRA)                                     True\n",
-       "British West Indies (BWI) [BWI]                 False\n",
-       "Bulgaria (BUL) [H]                               True\n",
-       "Burundi (BDI)                                    True\n",
-       "Cameroon (CMR)                                   True\n",
-       "Canada (CAN)                                     True\n",
-       "Chile (CHI) [I]                                  True\n",
-       "China (CHN) [CHN]                                True\n",
-       "Colombia (COL)                                   True\n",
-       "Costa Rica (CRC)                                 True\n",
-       "Ivory Coast (CIV) [CIV]                         False\n",
-       "Croatia (CRO)                                    True\n",
-       "Cuba (CUB) [Z]                                   True\n",
-       "Cyprus (CYP)                                    False\n",
-       "                                                ...  \n",
-       "Sri Lanka (SRI) [SRI]                           False\n",
-       "Sudan (SUD)                                     False\n",
-       "Suriname (SUR) [E]                               True\n",
-       "Sweden (SWE) [Z]                                 True\n",
-       "Switzerland (SUI)                                True\n",
-       "Syria (SYR)                                      True\n",
-       "Chinese Taipei (TPE) [TPE] [TPE2]                True\n",
-       "Tajikistan (TJK)                                False\n",
-       "Tanzania (TAN) [TAN]                            False\n",
-       "Thailand (THA)                                   True\n",
-       "Togo (TOG)                                      False\n",
-       "Tonga (TGA)                                     False\n",
-       "Trinidad and Tobago (TRI) [TRI]                  True\n",
-       "Tunisia (TUN)                                    True\n",
-       "Turkey (TUR)                                     True\n",
-       "Uganda (UGA)                                     True\n",
-       "Ukraine (UKR)                                    True\n",
-       "United Arab Emirates (UAE)                       True\n",
-       "United States (USA) [P] [Q] [R] [Z]              True\n",
-       "Uruguay (URU)                                    True\n",
-       "Uzbekistan (UZB)                                 True\n",
-       "Venezuela (VEN)                                  True\n",
-       "Vietnam (VIE)                                   False\n",
-       "Virgin Islands (ISV)                            False\n",
-       "Yugoslavia (YUG) [YUG]                           True\n",
-       "Independent Olympic Participants (IOP) [IOP]    False\n",
-       "Zambia (ZAM) [ZAM]                              False\n",
-       "Zimbabwe (ZIM) [ZIM]                             True\n",
-       "Mixed team (ZZX) [ZZX]                           True\n",
-       "Totals                                           True\n",
-       "Name: Gold, Length: 147, dtype: bool"
+       "Afghanistan (AFG)          False\n",
+       "Algeria (ALG)               True\n",
+       "Argentina (ARG)             True\n",
+       "Armenia (ARM)               True\n",
+       "Australasia (ANZ) [ANZ]     True\n",
+       "Name: Gold, dtype: bool"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mask = df['Gold'] > 0 \n",
-    "mask"
+    "mask.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2721,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2786,32 +2731,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use  .loc when using boolean mask to filter and column selection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "147\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Algeria (ALG)</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Argentina (ARG)</th>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Armenia (ARM)</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australasia (ANZ) [ANZ]</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australia (AUS) [AUS] [Z]</th>\n",
+       "      <td>139</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "100"
+       "                           Gold  Silver\n",
+       "Algeria (ALG)                 5       2\n",
+       "Argentina (ARG)              18      24\n",
+       "Armenia (ARM)                 1       2\n",
+       "Australasia (ANZ) [ANZ]       3       4\n",
+       "Australia (AUS) [AUS] [Z]   139     152"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = df[mask]\n",
-    "print(len(df))\n",
-    "len(df1)"
+    "df1 = df.loc[mask, ['Gold', 'Silver']]\n",
+    "df1.head()\n",
+    "#print(len(df))\n",
+    "#len(df1)"
    ]
   },
   {
@@ -2879,7 +2883,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df4 = df.where((df['Gold'] > 0) & (df['Silver'] > 1)).dropna(axis =0)"
@@ -3473,7 +3479,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dir = '/Users/sumad/Documents/DS/Python/UM Spcialization/DS_with_Python/'\n",
@@ -3484,7 +3492,9 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dt.drop('Unnamed: 0',inplace= True, axis= 1)\n",
@@ -3626,7 +3636,9 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dt1 = dt.set_index(['year','cyl'])"
@@ -4783,7 +4795,9 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "purchase_1 = pd.Series({'Name': 'Chris',\n",
@@ -4939,6 +4953,123 @@
    "source": [
     "pd.isnull(np.nan)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# np functions ignore NaN value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "      <th>three</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one  two  three\n",
+       "0  1.0  2.0    3.0\n",
+       "1  4.0  NaN    6.0\n",
+       "2  3.0  4.0    NaN"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = pd.Series([1,2,3], index = ['one', 'two', 'three'])\n",
+    "y = pd.Series([4,None,6], index = x.index)\n",
+    "z = pd.Series([3,4,None], index = x.index)\n",
+    "pd.DataFrame([x,y,z])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    4.0\n",
+       "2    3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(pd.DataFrame([x,y,z]),axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
