--- a/Python/UM Spcialization/Applied_Plotting/Week2/Mtplotlib_temp.ipynb
+++ b/Python/UM Spcialization/Applied_Plotting/Week2/Mtplotlib_temp.ipynb
@@ -55,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = np.arange(10)\n",
@@ -943,7 +945,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dates = np.arange('2018-07-24','2018-08-03' , dtype= 'datetime64') # below d ates render well, else pd.to_datetime() would have\n",
@@ -1773,7 +1777,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ax = plt.gca()"
@@ -1782,7 +1788,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Iterate over labels, and use set_rotation property \n",
@@ -1828,7 +1836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
