Clustering Week 2 WIP

--- a/Python/UW_Clustering_and_Retreival/Week1/Week1.ipynb
+++ b/Python/UW_Clustering_and_Retreival/Week1/Week1.ipynb
@@ -17,12 +17,12 @@
     "     a. Numeric representation of text, images, videos etc.  \n",
     "     b. Distance metric. to measure nearness **  \n",
     "     \n",
-    "2. **Clustering**.  : Dicovery of similar groups in data that are homogeneous each within themelves and heterogeneous  w.r.t others - an unsupervised learning task. Clustering can aid retreival, if we are for to find in a corpus of new articles, which ones are sports, politics, entertainment news articles,& they   can be organized, and retreival can be specific to the cluster that can be computed on the input. Clustering can be thought of a prework for efficient retreival. Examples:\n",
+    "2. **Clustering**.  : Dicovery of similar groups in data that are homogeneous each within themelves and heterogeneous  w.r.t others - an unsupervised learning task. Clustering can aid retreival, if we are to find in a corpus of new articles, which ones are sports, politics, entertainment news articles,& they   can be organized, and retreival can be specific to the cluster that can be computed on the input. Clustering can be thought of a prework for efficient retreival. Examples:\n",
     "   1. Cluster images to identify topics like sunset, sunrise, noon etc. \n",
     "   2. Cluster learners , customers.. the objectives of clustering can be cleverly defined to then derive varied   \n",
     "   metrics to try and identify groups.  \n",
     "   \n",
-    "3. **Mixture of Gaussians**: Probabilistic clustering models. The approach is one that of accounting for uncertaininty  in    cluster membership , and allowing for soft clutering, i.e a record in data can have probability based allocation to    more than one cluster groups. \n",
+    "3. **Mixture of Gaussians**: Probabilistic clustering models. The approach is one that of accounting for uncertaininty  in    cluster membership , and allowing for soft clustering, i.e a record in data can have probability based allocation to    more than one cluster groups. \n",
     "\n",
     "4. **Latent Dirichlet Allocation** : A document is thought of as a mixture of topics/cluster, and a topic is thought of as representable by distribution of words in vocabulary.  LDA takes no. of topics as. input parameter and discovers-  \n",
     "   a. The extent of topics covered in each document.  \n",
