--- a/Python/UM Spcialization/DS_with_Python/Week 3/Advanced_Pandas.ipynb
+++ b/Python/UM Spcialization/DS_with_Python/Week 3/Advanced_Pandas.ipynb
@@ -2519,7 +2519,9 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "file = '/Users/sumad/Documents/DS/Python/UM Spcialization/DS_with_Python' + '/mpg.csv' \n",
@@ -3329,7 +3331,9 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "counts1 = np.cumsum(np.random.randint(low = 1,high = 40,size= 9))\n",
@@ -3946,7 +3950,9 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plotting a pandas series with DatetimeIndex\n",
@@ -4001,7 +4007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
