DL course 1 theory complete

--- a/Deep Learning/1_Neural Networks/Week 2/Notebooks/1_LR_algo_math_rep.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 2/Notebooks/1_LR_algo_math_rep.ipynb
@@ -355,7 +355,7 @@
     "* The derivative of cost function with respect to an input variables or intermediate variable needs a back propagation on this computation graph. Link property of derivatives, can be viewed as Backpropagating on the computation graph.\n",
     "Let's say computation sequence of J, x,y is as x -> y - >J, then.  \n",
     "$$\\frac{\\partial}{\\partial x}J = \\frac{\\partial}{\\partial x}y * \\frac{\\partial}{\\partial y}J$$  \n",
-    "So. first you compute $\\frac{\\partial}{\\partial y}J$ and then $\\frac{\\partial}{\\partial y}x$ to get to $\\frac{\\partial}{\\partial x}J$.  "
+    "So. first you compute $\\frac{\\partial}{\\partial y}J$ and then $\\frac{\\partial}{\\partial x}y$ to get to $\\frac{\\partial}{\\partial x}J$.  "
    ]
   },
   {
