--- a/Deep Learning/1_Neural Networks/Week 2/Notebooks/9_Numpy_essentials_DeepLearning.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 2/Notebooks/9_Numpy_essentials_DeepLearning.ipynb
@@ -726,7 +726,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L1\n",
