--- a/Deep Learning/1_Neural Networks/Week 2/Notebooks/Deep_Reinforcement_Learning.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 2/Notebooks/Deep_Reinforcement_Learning.ipynb
@@ -11,8 +11,9 @@
     "  - Typical examples are Autonomous Vehicles, Robotics. \n",
     "    - Questions on  \n",
     "    a. Systems to reason over long term horizon, current successes are limited to short term horizon  \n",
-    "    b. Learning safely. c. Keep Learning over long time  \n",
-    "    c. Can we design programs to learn the reinforcement learning programs\n",
+    "    b. Learning safely.  \n",
+    "    c. Keep Learning over long time   \n",
+    "    d. Can we design programs to learn the reinforcement learning programs\n",
     "2. Deep RL\n",
     "  - Deep representation of RL \n",
     "    "
