--- a/Deep Learning/1_Neural Networks/Week 3/Notebooks/1_2layerNN.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 3/Notebooks/1_2layerNN.ipynb
@@ -50,19 +50,20 @@
     "\n",
     "Weight vectors are defined with respect to a unit in a layer. For a unit in layer k, fed from h units from layer k-1,\n",
     "it will have h weights, and 1 bias.In general - \n",
-    "* **Weight vector** defined for a unit j in layer k is $w^{[k]}_j$, with dimensions h x 1, h being units from k-1 layer feeding this unit. \n",
+    "* **Weight vector** defined for a unit j in layer k is a row vector $w^{[k]}_j$, with dimensions 1 x h, h being units from k-1 layer feeding this unit. \n",
     "* For network above there are 4 weight vectors for each hidden unit in layer 1 - $w^{[1]}_1 \\;, w^{[1]}_2,\\; w^{[1]}_3,\\; w^{[1]}_4$  , with a vector expanded as  \n",
-    "$w^{[1]}_1 = \\left\\lgroup \\matrix {w^{[1]}_{11} \\cr w^{[1]}_{12} \\cr w^{[1]}_{13}}  \\right \\rgroup$  \n",
+    "$w^{[1]}_1 = \\left\\lgroup \\matrix {w^{[1]}_{11} & w^{[1]}_{12} & w^{[1]}_{13}}  \\right \\rgroup$  \n",
     "\n",
-    "* The **Weight matrix ** for this layer can be defined by stacking these weight vectors in cols as below. **The first position in subscript identifies the hidden unit in layer, the second identifies the hidden unit in previous layer connecting to it  **  \n",
-    "$W^{[1]} = \\left\\lgroup \\matrix {w^{[1]}_{11} & w^{[1]}_{21} & w^{[1]}_{31} & w^{[1]}_{41} \\cr w^{[1]}_{12} & w^{[1]}_{22} & w^{[1]}_{32} & w^{[1]}_{42} \\cr w^{[1]}_{13} & w^{[1]}_{23} & w^{[1]}_{33} & w^{[1]}_{43}} \\right \\rgroup \\\\$  \n",
-    "The order being $(n^{[0]}, n^{[1]})$ , that is (3,4) \n",
+    "* The **Weight matrix ** for this layer can be defined by stacking these weight vectors in rows as below. **The first position in subscript identifies the hidden unit in layer, the second identifies the hidden unit in previous layer connecting to it  **  \n",
+    "$W^{[1]} = \\left\\lgroup \\matrix {w^{[1]}_{11} & w^{[1]}_{12} & w^{[1]}_{13} \\cr w^{[1]}_{21} & w^{[1]}_{22} & w^{[1]}_{23}  \\cr w^{[1]}_{31} & w^{[1]}_{32} & w^{[1]}_{33} \\cr w^{[1]}_{41} & w^{[1]}_{42} & w^{[1]}_{43}}\n",
+    "\\right \\rgroup \\\\$  \n",
+    "The order being $(n^{[1]}, n^{[0]})$ , that is (4,3) \n",
     "\n",
     "$\n",
-    "W^{[2]} =  \\left\\lgroup \\matrix {w^{[2]}_{11} \\cr w^{[2]}_{12} \\cr w^{[2]}_{13} \\cr w^{[2]}_{14}}\n",
+    "W^{[2]} =  \\left\\lgroup \\matrix {w^{[2]}_{11} & w^{[2]}_{12} & w^{[2]}_{13} & w^{[2]}_{14}}\n",
     "                \\right \\rgroup \\\\\n",
     "$\n",
-    "The order being $(n^{[1]}, n^{[2]})$ , that is (4,1) \n",
+    "The order being $(n^{[2]}, n^{[1]})$ , that is (1,4) \n",
     "\n",
     "\n",
     "\n",
@@ -81,10 +82,10 @@
     "#### Main Variables. \n",
     "\n",
     "**z matrices ( shown for 1 example, and hence small case)**   \n",
-    "$z^{[k]}$ matrix serves as input to derive activation, and $z^{[k]} = W^{[k]^T}.a^{[k-1]} + b^{[k]}$ specifically - .  \n",
-    "  * $z^{[1]} = W^{[1]^T}.a^{[0]} + b^{[1]}$ , of order $(n^{[1]}, 1)$, here 4 x 1  \n",
+    "$z^{[k]}$ matrix serves as input to derive activation, and $z^{[k]} = W^{[k]}.a^{[k-1]} + b^{[k]}$ specifically - .  \n",
+    "  * $z^{[1]} = W^{[1]}.a^{[0]} + b^{[1]}$ , of order $(n^{[1]}, 1)$, here 4 x 1  \n",
     "    $\\left\\lgroup \\matrix {z^{[1]}_1 \\cr z^{[1]}_2 \\cr z^{[1]}_3 \\cr z^{[1]}_4} \\right \\rgroup$ \n",
-    "  * $z^{[2]} = W^{[2]^T}.a^{[1]} + b^{[2]}$ will be for output layer , $(n^{[2]}, 1)$ of 1 x 1 dimension here \n",
+    "  * $z^{[2]} = W^{[2]}.a^{[1]} + b^{[2]}$ will be for output layer , $(n^{[2]}, 1)$ of 1 x 1 dimension here \n",
     "\n",
     "\n",
     "\n",
@@ -108,6 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Note : Don't take transpose of W, we changed convention of weight matrix of stacking each hidden unit in a row**\n",
     "<img src = \"../images/unit_computation.jpg\" style = \"width:400px; height: 300px\">\n",
     "\n",
     "Computation for a single unit in the layer is in two parts as shown above for  $z^{[1]} \\text{and} \\; a^{[1]} \\; \\text {using} W^{[1]}$ \n",
@@ -115,7 +117,8 @@
     "**Layer 1**   \n",
     "* $ z^{[1]}  =\n",
     "\\left\\lgroup \\matrix{z^{[1]}_1 \\cr z^{[1]}_2 \\cr z^{[1]}_3 \\cr z^{[1]}_4}\\right\\rgroup = \n",
-    "\\left\\lgroup \\matrix {w^{[1]}_{11} & w^{[1]}_{21} & w^{[1]}_{31} & w^{[1]}_{41} \\cr w^{[1]}_{12} & w^{[1]}_{22} & w^{[1]}_{32} & w^{[1]}_{42} \\cr w^{[1]}_{13} & w^{[1]}_{23} & w^{[1]}_{33} & w^{[1]}_{43}} \\right \\rgroup^T .\n",
+    "\\left\\lgroup \\matrix {w^{[1]}_{11} & w^{[1]}_{12} & w^{[1]}_{13} \\cr w^{[1]}_{21} & w^{[1]}_{22} & w^{[1]}_{23} \n",
+    "\\cr w^{[1]}_{31} & w^{[1]}_{32} & w^{[1]}_{33} \\cr w^{[1]}_{41} & w^{[1]}_{42} & w^{[1]}_{43} } \\right \\rgroup .\n",
     "\\left\\lgroup \\matrix{x_1 \\cr x_2 \\cr x_3}\\right \\rgroup + \n",
     "\\left\\lgroup \\matrix{b^{[1]}_1 \\cr b^{[1]}_2 \\cr b^{[1]}_3 \\cr b^{[1]}_4}\\right\\rgroup$  \n",
     "* $a^{[1]} = \\left\\lgroup \\matrix{a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4}\\right\\rgroup = \n",
@@ -125,7 +128,7 @@
     "\n",
     "**Layer 2** \n",
     "* $z^{[2]} = z^{[2]}_1 =  \n",
-    "\\left\\lgroup \\matrix {w^{[2]}_{11} \\cr w^{[2]}_{12} \\cr w^{[2]}_{13} \\cr w^{[2]}_{14}} \\right \\rgroup^T \\left\\lgroup \\matrix {a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4} \\right \\rgroup + b^{[2]}_1$  \n",
+    "\\left\\lgroup \\matrix {w^{[2]}_{11} & w^{[2]}_{12} & w^{[2]}_{13} & w^{[2]}_{14}} \\right \\rgroup. \\left\\lgroup \\matrix {a^{[1]}_1 \\cr a^{[1]}_2 \\cr a^{[1]}_3 \\cr a^{[1]}_4} \\right \\rgroup + b^{[2]}_1$  \n",
     "\n",
     "* $a^{[2]} = g^{[2]}(z^{[2]})$\n",
     "\n",
@@ -134,9 +137,9 @@
     "A concize matrix representation can be written as :  \n",
     " \n",
     "\\begin{align}  \n",
-    "z^{[1]}  &= {W^{[1]}}^T . x + b^{[1]} \\tag 1\\\\\n",
+    "z^{[1]}  &= {W^{[1]}} . x + b^{[1]} \\tag 1\\\\\n",
     "a^{[1]} &=  g^{[1]}(z^{[1]})\\tag 2\\\\\n",
-    "z^{[2]}  &= {W^{[2]}}^T . a^{[1]} + b^{[2]} \\tag 3\\\\\n",
+    "z^{[2]}  &= {W^{[2]}} . a^{[1]} + b^{[2]} \\tag 3\\\\\n",
     "a^{[2]} &= g^{[2]}(z^{[2]}) \\tag 4\n",
     "\\end{align}"
    ]
@@ -162,9 +165,9 @@
    "source": [
     "The 4 equations for case of single example can be more specifically written as. - \n",
     "\\begin{align}  \n",
-    "z^{[1](i)}  &= {W^{[1]}}^T . x^{(i)} + b^{[1]} \\tag 1\\\\\n",
+    "z^{[1](i)}  &= {W^{[1]}} . x^{(i)} + b^{[1]} \\tag 1\\\\\n",
     "a^{[1](i)} &= g^{[1]}(z^{[1](i)})\\tag 2\\\\\n",
-    "z^{[2](i)}  &= {W^{[2]}}^T . a^{[1](i)} + b^{[2]} \\tag 3\\\\\n",
+    "z^{[2](i)}  &= {W^{[2]}} . a^{[1](i)} + b^{[2]} \\tag 3\\\\\n",
     "a^{[2](i)} &= g^{[2]}(z^{[2](i)}) \\tag 4\n",
     "\\end{align}"
    ]
@@ -175,16 +178,16 @@
    "source": [
     "To calculate over m examples, we can use a for loop, but a vectorized implementation would be as -  \n",
     "\\begin{align}\n",
-    "Z^{[1]}  &= {W^{[1]}}^T . X + b^{[1]} \\tag 4\\\\\n",
+    "Z^{[1]}  &= {W^{[1]}} . X + b^{[1]} \\tag 4\\\\\n",
     "A^{[1]} &= g^{[1]}(Z^{[1]})\\tag 5\\\\\n",
-    "Z^{[2]}  &= {W^{[2]}}^T . A^{[1]} + b^{[2]} \\tag 6\\\\\n",
+    "Z^{[2]}  &= {W^{[2]}} . A^{[1]} + b^{[2]} \\tag 6\\\\\n",
     "A^{[2]} &= g^{[2]}(Z^{[2]}) \\tag 7\n",
     "\\end{align}  \n",
     "\n",
     "**Note capitalized X,Z,A**  \n",
-    "* Eq 4 : X - dims are 3 x m, $W^{[1]}$ - dims are 3 x 4, dims of $b^{[1]}$ are 4 x 1 broadcasted to 4 x m, so $Z^{[1]}$ has dims 4 x m  \n",
+    "* Eq 4 : X - dims are 3 x m, $W^{[1]}$ - dims are 4 x 3, dims of $b^{[1]}$ are 4 x 1 broadcasted to 4 x m, so $Z^{[1]}$ has dims 4 x m  \n",
     "* Eq 5 : $A^{[1]}$ has dims 4 x m  \n",
-    "* Eq 6 : $W^{[2]}$ - dims are 4 x 1,dims of $b^{[2]}$ are 1 x 1 broadcasted to 1 x m, so $Z^{[2]}$ has dims 1 x m  \n",
+    "* Eq 6 : $W^{[2]}$ - dims are 1 x 4,dims of $b^{[2]}$ are 1 x 1 broadcasted to 1 x m, so $Z^{[2]}$ has dims 1 x m  \n",
     "* Eq 7 : $A^{[2]}$ has dims 1 x m\n"
    ]
   },
@@ -199,7 +202,7 @@
     "\n",
     " ** Takeaways** -  \n",
     " - $A^{[k]}_{i,\\;j}$ represents activation on example j by hiddent unit i in layer k  \n",
-    " - All neurons in a hidden layer generate an activation on a training example, obtained as a column vector, represented as $ z_{,j} = g(W^T . X_{,j})$. So, $ z_{,1}, z_{,2}, .., z_{,m} $ vectors are stacked together for all training examples to yield Z matrix, same can be visualized for A matrix \n"
+    " - All neurons in a hidden layer generate an activation on a training example, obtained as a column vector, represented as $ z_{,j} = g(W. X_{,j})$. So, $ z_{,1}, z_{,2}, .., z_{,m} $ vectors are stacked together for all training examples to yield Z matrix, same can be visualized for A matrix \n"
    ]
   },
   {
@@ -217,11 +220,11 @@
     "1. Identity Functions do not yield features to get good predictive performance. \n",
     "2. To generate non-linear features, in a neural network, with hidden layers, one has to apply a non-linear transfromation, else the output simply becomes a linear transformation of inputs (from a composition of linear inputs)   A good example from the above 2 layer network. \n",
     "\\begin{align}\n",
-    "z^{[1](i)}  &= {W^{[1]}}^T . x^{(i)} + b^{[1]} \\\\\n",
+    "z^{[1](i)}  &= {W^{[1]}} . x^{(i)} + b^{[1]} \\\\\n",
     "a^{[1](i)} &= 1* (z^{[1](i)})\\\\\n",
-    "z^{[2](i)}  &= {W^{[2]}}^T . a^{[1](i)} + b^{[2]} \\\\\n",
+    "z^{[2](i)}  &= {W^{[2]}} . a^{[1](i)} + b^{[2]} \\\\\n",
     "a^{[2](i)} &= 1 * (z^{[2](i)})  \\\\ \n",
-    "a^{[2](i)} &= {W^{[2]}}^T . ({W^{[1]}}^T . x^{(i)} + b^{[1]}) + b^{[2]} \\tag 5\\\\\n",
+    "a^{[2](i)} &= {W^{[2]}}. ({W^{[1]}} . x^{(i)} + b^{[1]}) + b^{[2]} \\tag 5\\\\\n",
     "a^{[2](i)} &= W^{'}. x^{(i)} + b^{'} \\tag 6\n",
     "\\end{align}  \n",
     "\n",
@@ -1139,7 +1142,7 @@
    },
    "source": [
     "- Sigmoid function has a slope very close to 0 towards the high pos and neg values of z, so the gradient changes very slowly, and slows down learning. It also transforms input to an output b/w 0 and 1. So you are getting  a range of numbers b/w 0 and 1, to go in as input feature for next layer. Also it tends to center features around 0.5. \n",
-    "- Tanh is always better than sigmoid in that it has similar properties to sigmoid, centers data around 0 (** Desirable and has an effect of centering the data. Why it is a good is to be covered later **), and transforms input to an output in range [-1,1]  \n",
+    "- Tanh is always better than sigmoid in that it has similar properties to sigmoid, centers data around 0 (**Works better than sigmoid activation function for hidden units because the mean of its output is closer to zero, and so it centers the data better for the next layer.  **), and transforms input to an output in range [-1,1]  \n",
     "- Relu overcomes the disadvantages of the above two (vanishing gradient), as gradient is always 1 for positive input, and offere a broader range of inputs [0, inf]. **Derivative when z is 0 is not defined, but chances of getting an exact 0 are very less**. The disadvantages is it has 0 derivative. \n",
     "- Leaky ReLU offers an alternative and not getting a 0 derivative. m could be a hyperparameter in the learning algorithm.\n"
    ]
@@ -1186,7 +1189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 Vectorized Gradient Descent Computations for 1 example problem"
+    "### 1.5 Vectorized Gradient Descent Computations for 1 example problem ( Classification)"
    ]
   },
   {
@@ -1210,9 +1213,9 @@
     "### 1.5.2 Forward Propagation  \n",
     "For 1 example case, binary classification:  \n",
     "\\begin{align}  \n",
-    "z^{[1]}  &= {W^{[1]}}^T . x + b^{[1]} \\tag 1\\\\\n",
-    "a^{[1]} &=  g^{[1]}(z^{[1]})\\tag 2\\\\\n",
-    "z^{[2]}  &= {W^{[2]}}^T . a^{[1]} + b^{[2]} \\tag 3\\\\\n",
+    "z^{[1]}  &= {W^{[1]}} . x + b^{[1]}  \\\\\n",
+    "a^{[1]} &=  g^{[1]}(z^{[1]})           \\tag 2\\\\\n",
+    "z^{[2]}  &= {W^{[2]}} . a^{[1]} + b^{[2]} \\tag 3\\\\\n",
     "a^{[2]} &= g^{[2]}(z^{[2]}) \\tag 4 \\\\\n",
     "L(a^{[2]}, y) &= - [y* log(a^{[2]}) + (1-y)*log(1-a^{[2]}] \\tag5\n",
     "\\end{align}"
@@ -1242,17 +1245,17 @@
     "\\begin{align}\n",
     "da^{[2]} &= \\frac{a^{[2]} - y}{a^{[2]}(1 - a^{[2]})}\\\\\n",
     "dz^{[2]} &= \\frac{\\partial a^{[2]}}{\\partial z^{[2]}} da^{[2]} = a^{[2]} - y \\text{    for sigmoid}\\\\\n",
-    "dW^{[2]} &= \\frac{\\partial z^{[2]}}{\\partial W^{[2]}}* dz^{[2]} = a^{[1]}*dz^{[2]}\n",
+    "dW^{[2]} &= \\frac{\\partial z^{[2]}}{\\partial W^{[2]}}dz^{[2]} = dz^{[2]}.{a^{[1]}}^T  \\\\\n",
+    "\\text {refer : https://www.comp.nus.edu.sg/~cs5240/lecture/matrix-differentiation.pdf} \\\\ \n",
+    "\\text {need for transpose is understood by considering m example case} \\\\\n",
     "\\end{align}\n",
-    "$dW^{[2]}$ can be broken down to compute individual $dw^{[2]}_{ij}$'s, recognizing that  \n",
-    "$z^{[2]} = w_{11}^{[2]}.a_1^{[1]} + w_{12}^{[2]}.a_2^{[1]} + w_{13}^{[2]}.a_3^{[1]} + w_{14}^{[2]}.a_4^{[1]} + b^{[2]}$ \n",
     "\n",
     "\\begin{align}\n",
     "\\\\\n",
     "db^{[2]} &= \\frac{\\partial z^{[2]}}{\\partial b^{[2]}}. dz^{[2]} = dz^{[2]}\\\\\n",
-    "da^{[1]} &= \\frac{\\partial z^{[2]}}{\\partial a^{[1]}}. dz^{[2]} = W^{[2]}*dz^{[2]}\\\\\n",
+    "da^{[1]} &= \\frac{\\partial z^{[2]}}{\\partial a^{[1]}}. dz^{[2]} = {W^{[2]}}^T. dz^{[2]}\\\\\n",
     "dz^{[1]} &= \\frac{\\partial a^{[1]}}{\\partial z^{[1]}}. da^{[1]} = a^{[1]}*(1-a^{[1]})* da^{[1]}\\text{     for sigmoid}\\\\\n",
-    "dW^{[1]} &= \\frac{\\partial z^{[1]}}{\\partial W^{[1]}}. dz^{[1]} = a^{[0]}.{dz^{[1]}}^T \\text{       3x1, 1x4 to result in desired 3x4 matrix, computation could be broken down to compute individual} dw^{[1]}_{ij}\\\\\n",
+    "dW^{[1]} &= \\frac{\\partial z^{[1]}}{\\partial W^{[1]}}. dz^{[1]} = {dz^{[1]}}.{a^{[0]}}^T \\text{       4xm, mx3 to result in desired 4x3 matrix} \\\\\n",
     "db^{[1]} &= \\frac{\\partial z^{[1]}}{\\partial b^{[1]}}. dz^{[1]} = dz^{[1]}\n",
     "\\end{align}"
    ]
@@ -1265,13 +1268,111 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 1.6.1 Gradient  descent computation for m example case can be vectorixed by  extension as follows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Forward Propagation  \n",
+    "For m example case, binary classification:  \n",
+    "\\begin{align}  \n",
+    "Z^{[1]}  &= {W^{[1]}} . A^{[0]} + b^{[1]}  \\\\\n",
+    "A^{[1]} &=  g^{[1]}(Z^{[1]})           \\tag 2\\\\\n",
+    "Z^{[2]}  &= {W^{[2]}} . A^{[1]} + b^{[2]} \\tag 3\\\\\n",
+    "A^{[2]} &= g^{[2]}(Z^{[2]}) \\tag 4 \\\\\n",
+    "J(A^{[2]}, Y) &= - \\frac{1}{m} [Y * log(A^{[2]}) + (1-Y)*log(1-A^{[2]})] \\tag5\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Backward Pass \n",
+    "- **keepdims = true ensures, a rank matrix is not returned**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assuming $g{[1]}$ and $g{[2]}$ are sigmoid functions, we'll get:  \n",
+    "\\begin{align}\n",
+    "dA^{[2]} &= \\text{ for i in 1 to m } \\frac{{a^{[2]}}^{(i)} - y^{[i]}}{{a^{[2]}}^{(i)}(1 - {a^{[2]}}^{(i)})}\\\\\n",
+    "dZ^{[2]} &= A^{[2]} - Y \\text{    for sigmoid}\\\\\n",
+    "dW^{[2]} &=  \\frac{1}{m} dZ^{[2]}.{A^{[1]}}^T  \\\\\n",
+    "db^{[2]} &= \\frac{1}{m}\\; np.sum(dZ^{[2]}, \\;axis = 1, \\; \\text{keepdims = True)} \\\\\n",
+    "dA^{[1]} &=  {W^{[2]}}^T. dZ^{[2]}\\\\\n",
+    "dZ^{[1]} &= A^{[1]}*(1-A^{[1]})* dA^{[1]}\\text{     for sigmoid}\\\\\n",
+    "dW^{[1]} &= \\frac{1}{m} {dZ^{[1]}}.{A^{[0]}}^T \\text{       4xm, mx3 to result in desired 4x3 matrix} \\\\\n",
+    "db^{[1]} &=  \\frac{1}{m}\\; np.sum(dZ^{[1]}, \\;axis = 1, \\; \\text{keepdims = True)} \\\\\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.6.2 Gradient Descent algorithm with the vectorized calculations then becomes  (Simplistic Version)\n",
+    "- Given a training set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Initialize values of Weight and Bias Vectors randomly, Cost function to infinity. \n",
+    "2. Fix architecture, activation functions. \n",
+    "3. Repeat steps 2 -4 n number of times  \n",
+    "  - Make forward pass, and compute Cost function.  \n",
+    "  - If cost decreases, make a backward pass to compute gradients, then change in weight and bias matrices. \n",
+    "  - Go to Step 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7 The need for random initialization and choosing small weights. \n",
+    "-  Initialization to zeros, or with all weights being same causes the problem of all activation functions \n",
+    "   computing same values, we want different activations to compute different functions. \n",
+    "- With zero/same initialization, by induction, we can think that we put the computations in iterations, with each \n",
+    "  iteration resulting in same computed activations, which might not yield a good fit or learned weights. \n",
+    "- Hence random initialization is important for weights, and in such case bias units can be initialized to 0.\n",
+    "- **Also, important is to initialize to small weights. If large weights are used, and activation functions are sigmoid\n",
+    "or tanh, we could get into the problem of vanishing gradients.**\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.01581504, -0.01347278,  0.00127864],\n",
+       "       [ 0.01421089, -0.00578884,  0.0018395 ]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example ofg initializing a 2*3 weight matrix\n",
+    "import numpy as np\n",
+    "np.random.randn(2,3) * 0.01"
+   ]
   }
  ],
  "metadata": {
