--- a/Python/UM Spcialization/Machine_Learning/Week 1/Intro_to_ML.ipynb
+++ b/Python/UM Spcialization/Machine_Learning/Week 1/Intro_to_ML.ipynb
@@ -33,6 +33,7 @@
     "    difficult. \n",
     "  - ENhancements to this rule woule be cumbersome. \n",
     "- ML gives us a technology to learn from examples, and learn rules, i.e teach computer how to make a rule. \n",
+    "  Can call it inductive learning vs deductive vs bayesian.  \n",
     "-  ML should be able to generalize well on new examples, and hence be able to learn from examples. "
    ]
   },
@@ -57,14 +58,14 @@
     "  - Which ads to show based on previous interactions. \n",
     "- Movie Recommendations \n",
     "  - Movies likeable by you based on your histoty , your similarity to other useres, and giving recommendations \n",
-    "- Speech Recognition  \n",
+    "- Speech Recognition , Language translation  \n",
     "  - Technology today has become very reliable.   \n",
     "- Computer Vision. \n",
     "  - USPS used to classify emails\n",
-    "  - Medical area : Cancer benign of dangerous \n",
+    "  - Medical area : Cancer benign or dangerous \n",
     "  - Self driving vehciles \n",
     "    - Reinforcement learning \n",
-    "    - real time detect recognition "
+    "    - real time face recognition "
    ]
   },
   {
@@ -80,6 +81,7 @@
     "  - Clustering : Unlabeled data, process to identify distinct groups in the data\n",
     "    Eg: Customer visiting your site could be : Active, Passive, Intermittend users. \n",
     "  - Anomaly Detection : Aspect of detecting behavior that is odd with what you would normally see. \n",
+    "    Train a model on good cases only, odd example is recognized as anomaly. \n",
     "    Fraud, Cyber hackingm spam emails \n",
     "  \n",
     "### 4. Iterative Process containing - \n",
@@ -92,7 +94,7 @@
     "2. Learning algorithm \n",
     "  - Choose amongst a variety of learning algorithms \n",
     "  - parametric/ non-parametric \n",
-    "  - typical choice varies on speed of learning, accuracy (bias), generalizability (variance), interpretability  \n",
+    "  - typical choice varies on speed of learning, accuracy, bias , generalizability (variance), interpretability  \n",
     "3. Evaluation metric \n",
     "  - Performance of the learned function on training data on evaluation data. \n",
     "  - Choice of metric governed by problem at hand \n",
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -197,18 +199,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fruit_label</th>\n",
+       "      <th>fruit_name</th>\n",
+       "      <th>fruit_subtype</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>color_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>192</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>0.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>180</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>0.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>176</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>86</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>84</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>0.79</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fruit_label fruit_name fruit_subtype  mass  width  height  color_score\n",
+       "0            1      apple  granny_smith   192    8.4     7.3         0.55\n",
+       "1            1      apple  granny_smith   180    8.0     6.8         0.59\n",
+       "2            1      apple  granny_smith   176    7.4     7.2         0.60\n",
+       "3            2   mandarin      mandarin    86    6.2     4.7         0.80\n",
+       "4            2   mandarin      mandarin    84    6.0     4.6         0.79"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fruits.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -219,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +386,7 @@
        "orange               19"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2394,7 +2493,6 @@
     "import matplotlib.patches as mpatches\n",
     "#import graphviz\n",
     "from sklearn.tree import export_graphviz\n",
-    "import matplotlib.patches as mpatches\n",
     "\n",
     "def plot_fruit_knn(X, y, n_neighbors, weights):\n",
     "    X_mat = X[['height', 'width']].as_matrix()\n",
@@ -4873,7 +4971,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Plot accuracy on train and test as a function of k \n",
@@ -5721,7 +5821,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "s = np.arange(0.1,1,0.1)\n",
@@ -6571,10 +6673,15 @@
    "source": [
     "Article draws attention to how algorithms can learn purposefully or inadvertently to make biases in decision making. \n",
     "Some of the ways bias can creep in -\n",
-    "1. Data omission/ Incorrect sample selection\n",
-    "2. Biases in the processes that produce data \n",
+    "1. Data omission/ Incorrect sample selection \n",
+    "   - Image model learns to predict a colored person as a gorilla\n",
+    "2. Biases in the processes that produce data  \n",
+    "   - Model to predict relapse to crime, could be racially biased, if biaes existed in capturing people of color \n",
+    "  for crimes more than other racial segments of population\n",
     "3. using models for decision making where they were not supposed to be used  \n",
-    "4. Surrogate objectives (clicks as surrogate for interest)"
+    "4. Surrogate objectives (clicks as surrogate for interest) \n",
+    "   - Articles get more clicks if they are sensational content vs informative. Is click a good measure \n",
+    "to consider when developing a model that predicts informative articles "
    ]
   }
  ],
